# adventofcode

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  main.cpp  utils.h
cpp/src/utils/: CMakeLists.txt  md5.cpp  md5.h
python/: day1.py  main.py
